--- a/examples/webgl_depth_peeling.html
+++ b/examples/webgl_depth_peeling.html
@@ -288,6 +288,16 @@ uniform sampler2D uPrevDepthTexture;
 
 				} );
 
+				window.addEventListener( 'resize', () => {
+
+					camera.aspect = window.innerWidth / window.innerHeight;
+					camera.updateProjectionMatrix();
+
+					renderer.setSize( window.innerWidth, window.innerHeight );
+					dp.setScreenSize( window.innerWidth, window.innerHeight, renderer.getPixelRatio() );
+
+				} );
+
 			}
 
 	</script>
