--- a/examples/webgl_depth_peeling.html
+++ b/examples/webgl_depth_peeling.html
@@ -28,180 +28,105 @@
 			import { CopyShader } from './jsm/shaders/CopyShader.js';
 			import { GUI } from './jsm/libs/lil-gui.module.min.js';
 
-			export class DepthPeeling {
+			const renderer = new THREE.WebGLRenderer();
+			const scene = new THREE.Scene();
+			const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
 
-				globalUniforms = {
-					uPrevDepthTexture: { value: null },
-					uReciprocalScreenSize: { value: new THREE.Vector2( 1, 1 ) },
-				};
-
-				layers = [];
-				depth = 3;
-				one = new THREE.DataTexture( new Uint8Array( [ 1, 1, 1, 1 ] ), 1, 1 );
-				quad = new FullScreenQuad(
-					new THREE.ShaderMaterial( {
-						...CopyShader,
-						transparent: true,
-						depthTest: false,
-						depthWrite: false,
-					} )
-				);
-				screenSize = new THREE.Vector2();
-				pixelRatio = 1;
-				originalClearColor = new THREE.Color();
-				ownScene = new THREE.Scene();
-				constructor( p ) {
-
-					this.setScreenSize( p.width, p.height, p.pixelRatio );
-					this.setDepth( p.depth );
-
-	}
-
-				add( sceneGraph ) {
-
-					const clonedScene = sceneGraph.clone( true );
-					clonedScene.traverse( ( obj ) => {
-
-						if ( obj instanceof THREE.Mesh && obj.material instanceof THREE.Material ) {
-
-							const clonedMaterial = obj.material.clone();
-							clonedMaterial.blending = THREE.NoBlending;
-							clonedMaterial.onBeforeCompile = ( shader ) => {
-
-								shader.uniforms.uReciprocalScreenSize =
-									this.globalUniforms.uReciprocalScreenSize;
-								shader.uniforms.uPrevDepthTexture =
-									this.globalUniforms.uPrevDepthTexture;
-								shader.fragmentShader = `
-// --- DEPTH PEELING SHADER CHUNK (START) (uniform definition)
-uniform vec2 uReciprocalScreenSize;
-uniform sampler2D uPrevDepthTexture;
-// --- DEPTH PEELING SHADER CHUNK (END)
-					${shader.fragmentShader}
-				`;
-								//peel depth
-								shader.fragmentShader = shader.fragmentShader.replace(
-									/}$/gm,
-									`
-// --- DEPTH PEELING SHADER CHUNK (START) (peeling)
-  vec2 screenPos = gl_FragCoord.xy * uReciprocalScreenSize;
-  float prevDepth = texture2D(uPrevDepthTexture,screenPos).x;
-  if( prevDepth >= gl_FragCoord.z )
-      discard;
-// --- DEPTH PEELING SHADER CHUNK (END)
-}
-					`
-								);
-
-							};
-
-							obj.material = clonedMaterial;
-							obj.material.needsUpdate = true;
-
-						}
-
-		} );
-					this.ownScene.add( clonedScene );
-
-	}
-
-				render( renderer, camera ) {
-
-					const originalRenderTarget = renderer.getRenderTarget();
-					const originalAutoClear = renderer.autoClear;
-					renderer.autoClear = false;
-
-					renderer.getClearColor( this.originalClearColor );
-					renderer.setClearColor( 0x000000 );
-
-					this.layers.reduceRight( ( prevDepth, layer ) => {
-
-						this.globalUniforms.uPrevDepthTexture.value = prevDepth;
-						renderer.setRenderTarget( layer );
-						renderer.clear();
-						renderer.render( this.ownScene, camera );
-						return layer.depthTexture;
-
-		}, this.one );
-
-					renderer.setRenderTarget( originalRenderTarget );
-					renderer.setClearColor( this.originalClearColor );
-					renderer.clear();
-
-					for ( const layer of this.layers ) {
-
-						this.quad.material.uniforms.tDiffuse.value =
-							layer.texture;
-						this.quad.material.needsUpdate = true;
-						this.quad.render( renderer );
-
-		}
-
-					renderer.autoClear = originalAutoClear;
-
-	}
-				getDepth() {
-
-					return this.depth;
-
-	}
-				setDepth( depth ) {
-
-					while ( depth < this.layers.length ) this.layers.pop()?.dispose();
-
-					const w = this.screenSize.width * this.pixelRatio;
-					const h = this.screenSize.height * this.pixelRatio;
-					while ( this.layers.length < depth )
-						this.layers.push(
-							new THREE.WebGLRenderTarget( w, h, {
-								depthTexture: new THREE.DepthTexture( w, h ),
-								// samples: 2,
-							} )
-						);
-
-					this.depth = depth;
-
-	}
-				setScreenSize( width, height, pixelRatio ) {
-
-					this.screenSize.set( width, height );
-					this.pixelRatio = pixelRatio;
-					const w = width * pixelRatio;
-					const h = height * pixelRatio;
-					this.globalUniforms.uReciprocalScreenSize.value.set(
-						1 / w,
-						1 / h
-					);
-
-					this.layers.forEach( ( rt ) => {
-
-						rt.setSize( w, h );
-						rt.depthTexture.dispose();
-						rt.depthTexture = new THREE.DepthTexture( w, h );
-
-					} );
-
-	}
-
-			}
-
-
+			const globalUniforms = {
+				uPrevDepthTexture: { value: null },
+				uReciprocalScreenSize: { value: new THREE.Vector2( 1, 1 ) },
+			};
+			const layers = [];
+			const one = new THREE.DataTexture( new Uint8Array( [ 1, 1, 1, 1 ] ), 1, 1 );
+			const quad = new FullScreenQuad(
+				new THREE.ShaderMaterial( {
+					...CopyShader,
+					transparent: true,
+					depthTest: false,
+					depthWrite: false,
+				} )
+			);
+			let depthPeelingScene = new THREE.Scene();
 
 			const AppState = {
 				Enabled: true,
 				Depth: 3,
 			};
-			init();
+
+			function resizeLayers( width, height, pixelRatio ) {
+
+				const w = width * pixelRatio;
+				const h = height * pixelRatio;
+				globalUniforms.uReciprocalScreenSize.value.set(
+					1 / w,
+					1 / h
+				);
+
+				layers.forEach( ( rt ) => {
+
+					rt.setSize( w, h );
+					rt.depthTexture.dispose();
+					rt.depthTexture = new THREE.DepthTexture( w, h );
+
+				} );
+
+			}
+
+			function resizeDepth( width, height, pixelRatio, depth ) {
+
+				while ( depth < layers.length ) layers.pop()?.dispose();
+
+				const w = width * pixelRatio;
+				const h = height * pixelRatio;
+				while ( layers.length < depth )
+					layers.push(
+						new THREE.WebGLRenderTarget( w, h, {
+							depthTexture: new THREE.DepthTexture( w, h ),
+						} )
+					);
+
+			}
+
+			function peelDepth( renderer, camera ) {
+
+				const originalRenderTarget = renderer.getRenderTarget();
+				const originalAutoClear = renderer.autoClear;
+				renderer.autoClear = false;
+
+				layers.reduceRight( ( prevDepth, layer ) => {
+
+					globalUniforms.uPrevDepthTexture.value = prevDepth;
+					renderer.setRenderTarget( layer );
+					renderer.clear();
+					renderer.render( depthPeelingScene, camera );
+					return layer.depthTexture;
+
+				}, one );
+
+				renderer.setRenderTarget( originalRenderTarget );
+				renderer.clear();
+
+				for ( const layer of layers ) {
+
+					quad.material.uniforms.tDiffuse.value =
+						layer.texture;
+					quad.material.needsUpdate = true;
+					quad.render( renderer );
+
+				}
+
+				renderer.autoClear = originalAutoClear;
+
+			}
+
+			init().then( animate );
+
 			async function init() {
 
-				const renderer = new THREE.WebGLRenderer();
 				renderer.setPixelRatio( window.devicePixelRatio );
 				renderer.setSize( window.innerWidth, window.innerHeight );
 				document.body.appendChild( renderer.domElement );
 
-				const scene = new THREE.Scene();
-				const width = window.innerWidth, height = window.innerHeight;
-				const camera = new THREE.PerspectiveCamera( 75, width / height, 0.1, 1000 );
 				camera.position.z = 5;
 
 				renderer.shadowMap.enabled = true;
@@ -264,26 +189,60 @@ uniform sampler2D uPrevDepthTexture;
 					.rotateY( - 2 * Math.PI * ( 1 / 10 ) );
 				scene.add( plane2 );
 
-				const dp = new DepthPeeling( { depth: AppState.Depth, width: window.innerWidth, height: window.innerHeight, pixelRatio: renderer.getPixelRatio() } );
-				dp.add( scene );
-				const animate = () =>
-					requestAnimationFrame( () =>
-						AppState.Enabled ? dp.render( renderer, camera ) : renderer.render( scene, camera )
-					 );
+				depthPeelingScene = scene.clone( true );
 
+				resizeLayers( window.innerWidth, window.innerHeight, renderer.getPixelRatio() );
+				resizeDepth( window.innerWidth, window.innerHeight, renderer.getPixelRatio(), AppState.Depth );
+
+				depthPeelingScene.traverse( ( obj ) => {
+
+					if ( obj instanceof THREE.Mesh && obj.material instanceof THREE.Material ) {
+
+						const clonedMaterial = obj.material.clone();
+						clonedMaterial.blending = THREE.NoBlending;
+						clonedMaterial.onBeforeCompile = ( shader ) => {
+
+							shader.uniforms.uReciprocalScreenSize = globalUniforms.uReciprocalScreenSize;
+							shader.uniforms.uPrevDepthTexture = globalUniforms.uPrevDepthTexture;
+							shader.fragmentShader = `
+// --- DEPTH PEELING SHADER CHUNK (START) (uniform definition)
+uniform vec2 uReciprocalScreenSize;
+uniform sampler2D uPrevDepthTexture;
+// --- DEPTH PEELING SHADER CHUNK (END)
+					${shader.fragmentShader}
+				`;
+							//peel depth
+							shader.fragmentShader = shader.fragmentShader.replace(
+								/}$/gm,
+								`
+// --- DEPTH PEELING SHADER CHUNK (START) (peeling)
+  vec2 screenPos = gl_FragCoord.xy * uReciprocalScreenSize;
+  float prevDepth = texture2D(uPrevDepthTexture,screenPos).x;
+  if( prevDepth >= gl_FragCoord.z )
+      discard;
+// --- DEPTH PEELING SHADER CHUNK (END)
+}
+					`
+							);
+
+						};
+
+						obj.material = clonedMaterial;
+						obj.material.needsUpdate = true;
+
+					}
+
+				} );
 
 				const orbit = new OrbitControls( camera, renderer.domElement );
 				orbit.update();
 				orbit.addEventListener( 'change', animate );
 
-
-				animate();
-
 				const gui = new GUI();
 				gui.add( AppState, 'Enabled' ).onChange( animate );
 				gui.add( AppState, 'Depth' ).min( 1 ).max( 5 ).step( 1 ).onChange( v => {
 
-					dp.setDepth( v );
+					resizeDepth( window.innerWidth, window.innerHeight, renderer.getPixelRatio(), v );
 					animate();
 
 				} );
@@ -294,12 +253,20 @@ uniform sampler2D uPrevDepthTexture;
 					camera.updateProjectionMatrix();
 
 					renderer.setSize( window.innerWidth, window.innerHeight );
-					dp.setScreenSize( window.innerWidth, window.innerHeight, renderer.getPixelRatio() );
+					resizeLayers( window.innerWidth, window.innerHeight, renderer.getPixelRatio() );
+					animate();
 
 				} );
 
 			}
 
+			function animate() {
+
+				requestAnimationFrame( () =>
+					AppState.Enabled ? peelDepth( renderer, camera ) : renderer.render( scene, camera )
+				);
+
+			}
 	</script>
 	</body>
 </html>
