--- a/examples/webgpu_particles.html
+++ b/examples/webgpu_particles.html
@@ -8,7 +8,7 @@
 	<body>
 
 		<div id="info">
-			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> WebGPU - Sprites
+			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> WebGPU - Particles
 		</div>
 
 		<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
