--- a/examples/webgl_test_memory2.html
+++ b/examples/webgl_test_memory2.html
@@ -77,7 +77,7 @@
 			let fragmentShader, vertexShader;
 
 			init();
-			setInterval( render, 1000 / 60 );
+			render();
 
 			function init() {
 
@@ -127,6 +127,8 @@
 			}
 
 			function render() {
+
+				requestAnimationFrame( render );
 
 				for ( let i = 0; i < N; i ++ ) {
 
