--- a/examples/webgpu_particles.html
+++ b/examples/webgpu_particles.html
@@ -95,7 +95,7 @@
 				smokeNodeMaterial.depthWrite = false;
 				smokeNodeMaterial.transparent = true;
 
-				const smokeInstancedSprite = new THREE.Sprite( smokeNodeMaterial );
+				const smokeInstancedSprite = new THREE.Mesh( new THREE.PlaneGeometry( 1, 1 ), smokeNodeMaterial );
 				smokeInstancedSprite.scale.setScalar( 400 );
 				smokeInstancedSprite.isInstancedMesh = true;
 				smokeInstancedSprite.count = 2000;
@@ -112,7 +112,7 @@
 				fireNodeMaterial.transparent = true;
 				fireNodeMaterial.depthWrite = false;
 
-				const fireInstancedSprite = new THREE.Sprite( fireNodeMaterial );
+				const fireInstancedSprite = new THREE.Mesh( new THREE.PlaneGeometry( 1, 1 ), fireNodeMaterial );
 				fireInstancedSprite.scale.setScalar( 400 );
 				fireInstancedSprite.isInstancedMesh = true;
 				fireInstancedSprite.count = 100;
