--- a/examples/webgl_raycaster_texture.html
+++ b/examples/webgl_raycaster_texture.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>three.js raycast - texture</title>
+		<title>three.js raycaster - texture</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<link type="text/css" rel="stylesheet" href="main.css">
@@ -19,7 +19,7 @@
 	<body>
 		<div id="container"></div>
 		<div id="info">
-			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> - raycast texture
+			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> raycaster - texture
 		</div>
 
 		<!-- Import maps polyfill -->
