--- a/examples/index.html
+++ b/examples/index.html
@@ -207,7 +207,7 @@
 				<div class="card">
 					<a href="${file}.html" target="viewer">
 						<div class="cover">
-							<img src="screenshots/${ file }.jpg" loading="lazy" width="400" />
+							<img src="screenshots/${ file }.png" loading="lazy" width="400" />
 						</div>
 						<div class="title">${getName( file )}</div>
 					</a>
