--- a/examples/webgl_animation_skinning_additive_blending.html
+++ b/examples/webgl_animation_skinning_additive_blending.html
@@ -203,7 +203,11 @@
 						const currentAction = currentSettings ? currentSettings.action : null;
 						const action = settings ? settings.action : null;
 
-						prepareCrossFade( currentAction, action, 0.35 );
+						if ( currentAction !== action ) { 
+						
+							prepareCrossFade( currentAction, action, 0.35 );
+						
+						}
 
 					};
 
@@ -273,8 +277,6 @@
 			}
 
 			function prepareCrossFade( startAction, endAction, duration ) {
-
-				if ( startAction === endAction ) return;
 
 				// If the current action is 'idle', execute the crossfade immediately;
 				// else wait until the current action has finished its current loop
