--- a/examples/webgl_materials_envmaps_ground-projected.html
+++ b/examples/webgl_materials_envmaps_ground-projected.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>threejs webgl - materials - hdr environment mapping</title>
+		<title>threejs webgl - materials - ground projected environment mapping</title>
 		<meta charset="utf-8" />
 		<meta
 			name="viewport"
