Update lint test

--- a/examples/webgl_raycaster_sprite.html
+++ b/examples/webgl_raycaster_sprite.html
@@ -67,6 +67,8 @@
 			camera.lookAt( scene.position );
 
 			controls = new OrbitControls( camera, renderer.domElement );
+			controls.target.set( 0, 0, 0 );
+			controls.update();
 
 			// add sprites
 
