--- a/examples/webgl_raycaster_bvh.html
+++ b/examples/webgl_raycaster_bvh.html
@@ -148,6 +148,8 @@
 				} );
 
 				controls = new OrbitControls( camera, renderer.domElement );
+				controls.target.set( 0, 0, 0 );
+				controls.update();
 
 				// set up gui
 				const gui = new GUI();
@@ -223,7 +225,7 @@
 
 					// raycast
 					_raycaster.ray.origin.copy( _position );
-					_raycaster.ray.direction.copy( _position ).multiplyScalar( - 1).normalize();
+					_raycaster.ray.direction.copy( _position ).multiplyScalar( - 1 ).normalize();
 
 					// update hits points and lines
 					const hits = _raycaster.intersectObject( mesh );
@@ -258,9 +260,6 @@
 
 			function onWindowResize() {
 
-				const hx = window.innerWidth / 2;
-				const hy = window.innerHeight / 2;
-
 				camera.aspect = window.innerWidth / window.innerHeight;
 				camera.updateProjectionMatrix();
 
@@ -291,6 +290,7 @@
 					mesh.updateMatrixWorld();
 
 				}
+
 				updateRays();
 
 				renderer.render( scene, camera );
