--- a/examples/webgl_raycaster_bvh.html
+++ b/examples/webgl_raycaster_bvh.html
@@ -112,7 +112,7 @@
 				} ) );
 
 				sphereInstance = new THREE.InstancedMesh(
-					new THREE.SphereBufferGeometry(),
+					new THREE.SphereGeometry(),
 					new THREE.MeshBasicMaterial( { color: RAY_COLOR } ),
 					2 * MAX_RAYS
 				);
