Added flag to optionally enable touch rotate for `TrackballControls`

--- a/examples/misc_controls_trackball.html
+++ b/examples/misc_controls_trackball.html
@@ -129,7 +129,7 @@
 
 			function createControls( camera ) {
 
-				controls = new TrackballControls( camera, renderer.domElement );
+				controls = new TrackballControls( camera, renderer.domElement, true );
 
 				controls.rotateSpeed = 1.0;
 				controls.zoomSpeed = 1.2;
