Improved wireframe in example

--- a/examples/webgl_modifier_subdivision.html
+++ b/examples/webgl_modifier_subdivision.html
@@ -78,7 +78,13 @@
 
 				} );
 
-				meshMaterial = new THREE.MeshBasicMaterial( { map: texture, side: THREE.DoubleSide } );
+				meshMaterial = new THREE.MeshBasicMaterial( {
+					map: texture,
+					polygonOffset: true,
+    				polygonOffsetFactor: 1, // positive value pushes polygon further away
+    				polygonOffsetUnits: 1,
+					side: THREE.DoubleSide
+				} );
 				meshNormal = new THREE.Mesh( new THREE.BufferGeometry(), meshMaterial );
 				meshSmooth = new THREE.Mesh( new THREE.BufferGeometry(), meshMaterial );
 				meshNormal.position.set( - 0.7, 0, 0 );
@@ -165,10 +171,13 @@
 						// Sine Wave
 
 						const points = [];
+
 						for ( let i = 0; i < 65; i += 5 ) {
+
 							let x = ( Math.sin( i * 0.2 ) * Math.sin( i * 0.1 ) * 15 + 50 ) * 1.2;
 							let y = ( i - 5 ) * 3;
 							points.push( new THREE.Vector2( x * 0.0075, y * 0.005 ) );
+
 						}
 
 						const latheGeometry = new THREE.LatheGeometry( points, 4 );
@@ -217,11 +226,7 @@
 				wireNormal.geometry = meshNormal.geometry.clone();
 				wireSmooth.geometry = meshSmooth.geometry.clone();
 
-				wireNormal.visible = params.wireframe;
-				wireSmooth.visible = params.wireframe;
-
-				wireNormal.scale.set( 1.01, 1.01, 1.01 );
-				wireSmooth.scale.set( 1.01, 1.01, 1.01 );
+				wireNormal.visible = wireSmooth.visible = params.wireframe;
 
 				render();
 
