--- a/examples/webgl_nodes_points.html
+++ b/examples/webgl_nodes_points.html
@@ -20,7 +20,7 @@
 			{
 				"imports": {
 					"three": "../build/three.module.js",
-					"three-nodes/": "./jsm/nodes/"
+					"three/nodes": "./jsm/nodes/Nodes.js"
 				}
 			}
 		</script>
