--- a/examples/webgl_nodes_loader_gltf_sheen.html
+++ b/examples/webgl_nodes_loader_gltf_sheen.html
@@ -26,7 +26,7 @@
 			{
 				"imports": {
 					"three": "../build/three.module.js",
-					"three-nodes/": "./jsm/nodes/"
+					"three/nodes": "./jsm/nodes/Nodes.js"
 				}
 			}
 		</script>
@@ -35,7 +35,7 @@
 
 			import * as THREE from 'three';
 
-			import { NodeMaterial, color, uv, mix, mul, checker } from 'three-nodes/Nodes.js';
+			import { NodeMaterial, color, uv, mix, mul, checker } from 'three/nodes';
 
 			import { nodeFrame } from './jsm/renderers/webgl/nodes/WebGLNodes.js';
 
