--- a/examples/webgl_nodes_materials_physical_clearcoat.html
+++ b/examples/webgl_nodes_materials_physical_clearcoat.html
@@ -19,7 +19,7 @@
 			{
 				"imports": {
 					"three": "../build/three.module.js",
-					"three-nodes/": "./jsm/nodes/"
+					"three/nodes": "./jsm/nodes/Nodes.js"
 				}
 			}
 		</script>
@@ -27,9 +27,9 @@
 		<script type="module">
 
 			import * as THREE from 'three';
-			import * as Nodes from 'three-nodes/Nodes.js';
+			import * as Nodes from 'three/nodes';
 
-			import { color, float, vec2, texture, normalMap, uv, mul } from 'three-nodes/Nodes.js';
+			import { color, float, vec2, texture, normalMap, uv, mul } from 'three/nodes';
 
 			import { nodeFrame } from './jsm/renderers/webgl/nodes/WebGLNodes.js';
 
