--- a/examples/webgpu_compute.html
+++ b/examples/webgpu_compute.html
@@ -17,7 +17,7 @@
 			{
 				"imports": {
 					"three": "../build/three.module.js",
-					"three-nodes/": "./jsm/nodes/"
+					"three/nodes": "./jsm/nodes/Nodes.js"
 				}
 			}
 		</script>
@@ -25,14 +25,14 @@
 		<script type="module">
 
 			import * as THREE from 'three';
-			import * as Nodes from 'three-nodes/Nodes.js';
+			import * as Nodes from 'three/nodes';
 
 			import {
 				ShaderNode, compute,
 				uniform, element, storage, attribute, mul, sin, cos,
 				temp, assign, add, sub, cond, abs, negate, max, min, length, float, vec2, vec3, color,
 				greaterThanEqual, lessThanEqual, instanceIndex
-			} from 'three-nodes/Nodes.js';
+			} from 'three/nodes';
 
 			import { GUI } from './jsm/libs/lil-gui.module.min.js';
 
