--- a/examples/webgpu_skinning.html
+++ b/examples/webgpu_skinning.html
@@ -18,7 +18,7 @@
 			{
 				"imports": {
 					"three": "../build/three.module.js",
-					"three-nodes/": "./jsm/nodes/"
+					"three/nodes": "./jsm/nodes/Nodes.js"
 				}
 			}
 		</script>
@@ -26,7 +26,7 @@
 		<script type="module">
 
 			import * as THREE from 'three';
-			import * as Nodes from 'three-nodes/Nodes.js';
+			import * as Nodes from 'three/nodes';
 
 			import { FBXLoader } from './jsm/loaders/FBXLoader.js';
 
