--- a/examples/webgpu_sprites.html
+++ b/examples/webgpu_sprites.html
@@ -17,7 +17,7 @@
 			{
 				"imports": {
 					"three": "../build/three.module.js",
-					"three-nodes/": "./jsm/nodes/"
+					"three/nodes": "./jsm/nodes/Nodes.js"
 				}
 			}
 		</script>
@@ -25,9 +25,9 @@
 		<script type="module">
 
 			import * as THREE from 'three';
-			import * as Nodes from 'three-nodes/Nodes.js';
+			import * as Nodes from 'three/nodes';
 
-			import { texture, uv, mul, float, color, userData } from 'three-nodes/Nodes.js';
+			import { texture, uv, mul, float, color, userData } from 'three/nodes';
 
 			import WebGPU from './jsm/capabilities/WebGPU.js';
 			import WebGPURenderer from './jsm/renderers/webgpu/WebGPURenderer.js';
