--- a/examples/webgl_raycaster_sprite.html
+++ b/examples/webgl_raycaster_sprite.html
@@ -37,7 +37,7 @@
 		import { OrbitControls } from './jsm/controls/OrbitControls.js';
 
 		let renderer, scene, camera;
-		let controls, group;
+		let group;
 
 		let selectedObject = null;
 		const raycaster = new THREE.Raycaster();
@@ -66,7 +66,7 @@
 			camera.position.set( 15, 15, 15 );
 			camera.lookAt( scene.position );
 
-			controls = new OrbitControls( camera, renderer.domElement );
+			new OrbitControls( camera, renderer.domElement );
 
 			// add sprites
 
