--- a/examples/webgl_raycaster_sprite.html
+++ b/examples/webgl_raycaster_sprite.html
@@ -66,8 +66,10 @@
 			camera.position.set( 15, 15, 15 );
 			camera.lookAt( scene.position );
 
-			new OrbitControls( camera, renderer.domElement );
-
+			const controls = new OrbitControls( camera, renderer.domElement );
+			controls.minDistance = 15;
+			controls.maxDistance = 250;
+		
 			// add sprites
 
 			const sprite1 = new THREE.Sprite( new THREE.SpriteMaterial( { color: '#69f' } ) );
