--- a/examples/webxr_ar_dragging.html
+++ b/examples/webxr_ar_dragging.html
@@ -54,8 +54,10 @@
 				camera = new THREE.PerspectiveCamera( 50, window.innerWidth / window.innerHeight, 0.1, 10 );
 				camera.position.set( 0, 0, 3 );
 
-				new OrbitControls( camera, container );
-
+				const controls = new OrbitControls( camera, container );
+				controls.minDistance = 0;
+				controls.maxDistance = 8;
+			
 				scene.add( new THREE.HemisphereLight( 0x808080, 0x606060 ) );
 
 				const light = new THREE.DirectionalLight( 0xffffff );
