--- a/examples/webgl_nodes_materialx_noise.html
+++ b/examples/webgl_nodes_materialx_noise.html
@@ -19,7 +19,7 @@
 			{
 				"imports": {
 					"three": "../build/three.module.js",
-					"three-nodes/": "./jsm/nodes/"
+					"three/nodes": "./jsm/nodes/Nodes.js"
 				}
 			}
 		</script>
@@ -27,14 +27,14 @@
 		<script type="module">
 
 			import * as THREE from 'three';
-			import { MeshPhysicalNodeMaterial, add, mul, normalWorld, saturate, timerLocal } from 'three-nodes/Nodes.js';
+			import { MeshPhysicalNodeMaterial, add, mul, normalWorld, saturate, timerLocal } from 'three/nodes';
 
 			import {
 				mx_perlin_noise_float,
 				mx_cell_noise_float,
 				mx_worley_noise_float,
 				mx_fractal_noise_float
-			} from 'three-nodes/materialx/functions/lib/mx_noise.js';
+			} from './jsm/nodes/materialx/functions/lib/mx_noise.js';
 
 			import { nodeFrame } from './jsm/renderers/webgl/nodes/WebGLNodes.js';
 
