spotlight map alpha

--- a/examples/webgl_lights_spotlight.html
+++ b/examples/webgl_lights_spotlight.html
@@ -67,7 +67,7 @@
 				scene.add( ambient );
 
 				const textureLoader = new THREE.TextureLoader();
-				textureUrls = [ 'none', 'uv_grid_opengl.jpg', 'sprite2.png', 'colors.png' ];
+				textureUrls = [ 'none', 'uv_grid_opengl.jpg', 'sprite2.png', 'colors.png', 'colors_transparent.png', 'colors_transparent2.png', 'lava/cloud.png' ];
 				textures = { none: null }
 
 				for ( let i = 1; i < textureUrls.length; i ++ ) {
