--- a/examples/webgl_nodes_materials_instance_uniform.html
+++ b/examples/webgl_nodes_materials_instance_uniform.html
@@ -19,11 +19,8 @@
 			{
 				"imports": {
 					"three": "../build/three.module.js",
-<<<<<<< HEAD:examples/webgl_materials_instance_uniform_nodes.html
-					"three/addons/": "./jsm/"
-=======
+					"three/addons/": "./jsm/",
 					"three/nodes": "./jsm/nodes/Nodes.js"
->>>>>>> dev:examples/webgl_nodes_materials_instance_uniform.html
 				}
 			}
 		</script>
@@ -35,15 +32,9 @@
 
 			import Stats from 'three/addons/libs/stats.module.js';
 
-<<<<<<< HEAD:examples/webgl_materials_instance_uniform_nodes.html
+			import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
+
 			import { nodeFrame } from 'three/addons/renderers/webgl/nodes/WebGLNodes.js';
-
-			import * as Nodes from 'three/addons/renderers/nodes/Nodes.js';
-=======
-			import { OrbitControls } from './jsm/controls/OrbitControls.js';
-
-			import { nodeFrame } from './jsm/renderers/webgl/nodes/WebGLNodes.js';
->>>>>>> dev:examples/webgl_nodes_materials_instance_uniform.html
 
 			class InstanceUniformNode extends Node {
 
