--- a/examples/webgl_modifier_subdivision.html
+++ b/examples/webgl_modifier_subdivision.html
@@ -21,6 +21,7 @@
 			{
 				"imports": {
 					"three": "../build/three.module.js",
+					"three/addons/": "./jsm/",
 					"three-subdivide": "https://unpkg.com/three-subdivide@1.0.2/build/index.module.js"
 				}
 			}
@@ -30,8 +31,8 @@
 
 			import * as THREE from 'three';
 			import { LoopSubdivision } from 'three-subdivide';
-			import { OrbitControls } from './jsm/controls/OrbitControls.js';
-			import { GUI } from './jsm/libs/lil-gui.module.min.js';
+			import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
+			import { GUI } from 'three/addons/libs/lil-gui.module.min.js';
 
 			let renderer, scene, camera;
 			let texture;
