--- a/examples/webgl_nodes_materials_physical_clearcoat.html
+++ b/examples/webgl_nodes_materials_physical_clearcoat.html
@@ -19,6 +19,7 @@
 			{
 				"imports": {
 					"three": "../build/three.module.js",
+					"three/addons/": "./jsm/",
 					"three/nodes": "./jsm/nodes/Nodes.js"
 				}
 			}
@@ -31,14 +32,14 @@
 
 			import { color, float, vec2, texture, normalMap, uv, mul } from 'three/nodes';
 
-			import { nodeFrame } from './jsm/renderers/webgl/nodes/WebGLNodes.js';
+			import { nodeFrame } from 'three/addons/renderers/webgl/nodes/WebGLNodes.js';
 
-			import Stats from './jsm/libs/stats.module.js';
+			import Stats from 'three/addons/libs/stats.module.js';
 
-			import { OrbitControls } from './jsm/controls/OrbitControls.js';
-			import { HDRCubeTextureLoader } from './jsm/loaders/HDRCubeTextureLoader.js';
+			import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
+			import { HDRCubeTextureLoader } from 'three/addons/loaders/HDRCubeTextureLoader.js';
 
-			import { FlakesTexture } from './jsm/textures/FlakesTexture.js';
+			import { FlakesTexture } from 'three/addons/textures/FlakesTexture.js';
 
 			let container, stats;
 
