--- a/examples/webgl_raycaster_texture.html
+++ b/examples/webgl_raycaster_texture.html
@@ -39,7 +39,7 @@
 
 			import * as THREE from 'three';
 
-			import { GUI } from './jsm/libs/lil-gui.module.min.js';
+			import { GUI } from 'three/addons/libs/lil-gui.module.min.js';
 
 			const WRAPPING = {
 				'RepeatWrapping': THREE.RepeatWrapping,
